increase perm gen for tests